--- a/templates/teacher/generatepaper.html
+++ b/templates/teacher/generatepaper.html
@@ -193,7 +193,7 @@
     </div>
 </main>
 
-<section class="w-2/3 mx-auto py-20">
+<section id="section2" class="mx-auto py-20">
     <h1 class="flex justify-center font-white text-4xl text-white">UPLOAD SECTION</h1>
     <div class="flex justify-center">
         <form action="{{ url_for('pdf_upload') }}" class="my-20" enctype="multipart/form-data" method="post">
