--- a/templates/student/studentgeneratepaper.html
+++ b/templates/student/studentgeneratepaper.html
@@ -122,23 +122,23 @@
         </div>
     </form>
 
-    <section id="section2" class="w-2/3 mx-auto py-20">
-        <!-- PDF Catalogue -->
-        <div class="container mx-auto px-4 py-8">
-            <h1 class="text-2xl text-white font-bold text-center mb-8">PDF Catalogue</h1>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                {% for pdf in pdfs %}
-                <div class="relative p-2 border rounded-md mb-2 bg-white">
-                    <p class="text-gray-700 mb-2">{{ pdf.note_name }}</p>
-                    <button class="text-white absolute right-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" onclick="window.open('/qp-display?pdf={{ pdf.uuid }}', '_blank')">Open</button>
-                </div>
-                {% endfor %}
-        </div>
-    </section>
+<!--    <section id="section2" class="w-2/3 mx-auto py-20">-->
+<!--        &lt;!&ndash; PDF Catalogue &ndash;&gt;-->
+<!--        <div class="container mx-auto px-4 py-8">-->
+<!--            <h1 class="text-2xl text-white font-bold text-center mb-8">PDF Catalogue</h1>-->
+<!--            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">-->
+<!--                {% for pdf in pdfs %}-->
+<!--                <div class="relative p-2 border rounded-md mb-2 bg-white">-->
+<!--                    <p class="text-gray-700 mb-2">{{ pdf.note_name }}</p>-->
+<!--                    <button class="text-white absolute right-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" onclick="window.open('/qp-display?pdf={{ pdf.uuid }}', '_blank')">Open</button>-->
+<!--                </div>-->
+<!--                {% endfor %}-->
+<!--        </div>-->
+<!--    </section>-->
 </main>
 
 <script>
-    const data = {{ search_dict | tojson}};
+    const data = {{ search_dict | tojson }};
 
     const searchInput = document.getElementById('default-search');
     const searchResultsContainer = document.getElementById('search-results');
@@ -152,53 +152,60 @@
 
     // Function to display search results
     function displayResults(results) {
-    searchResultsContainer.innerHTML = '';
+        searchResultsContainer.innerHTML = '';
 
-    if (searchInput.value === '') {
-        return;
-    }
+        if (searchInput.value === '') {
+            return;
+        }
 
-    if (results.length === 0) {
-        searchResultsContainer.innerHTML = '<p class="text-gray-500">No results found.</p>';
-        return;
-    }
+        if (results.length === 0) {
+            searchResultsContainer.innerHTML = '<p class="text-gray-500">No results found.</p>';
+            return;
+        }
 
-    results.forEach(([uuid, note_name]) => {
-        const div = document.createElement('div');
-        div.classList.add('relative', 'p-2', 'border', 'rounded-md', 'mb-2', 'bg-white');
+        results.forEach(([uuid, note_name]) => {
+            const div = document.createElement('div');
+            div.classList.add('relative', 'p-2', 'border', 'rounded-md', 'mb-2', 'bg-white');
 
-        const title = document.createElement('p');
-        title.textContent = note_name;
-        title.classList.add('text-gray-700', 'mb-2');
+            const title = document.createElement('p');
+            title.textContent = note_name;
+            title.classList.add('ml-2', 'text-gray-700', 'mb-2', 'text-center');
 
-        // Open button
-        const openButton = document.createElement('button');
-        openButton.textContent = 'Open';
-        openButton.classList.add('text-white', 'absolute', 'right-2.5', 'bottom-2.5', 'bg-blue-700', 'hover:bg-blue-800', 'focus:ring-4', 'focus:outline-none', 'focus:ring-blue-300', 'font-medium', 'rounded-lg', 'text-sm', 'px-4', 'py-2', 'dark:bg-blue-600', 'dark:hover:bg-blue-700', 'dark:focus:ring-blue-800');
-        openButton.addEventListener('click', () => {
-            window.open('/qp-display?pdf=' + uuid, '_blank');
+            // Checkbox
+            const checkbox = document.createElement('input');
+            checkbox.type = 'checkbox';
+            checkbox.id = `checkbox-${uuid}`;
+            checkbox.classList.add('absolute', 'left-2.5', 'top-3.5');
+
+
+            // Open button
+            const openButton = document.createElement('button');
+            openButton.textContent = 'Open';
+            openButton.classList.add('text-white', 'absolute', 'right-2.5', 'bottom-2.5', 'bg-blue-700', 'hover:bg-blue-800', 'focus:ring-4', 'focus:outline-none', 'focus:ring-blue-300', 'font-medium', 'rounded-lg', 'text-sm', 'px-4', 'py-2', 'dark:bg-blue-600', 'dark:hover:bg-blue-700', 'dark:focus:ring-blue-800');
+            openButton.addEventListener('click', () => {
+                window.open('/qp-display?pdf=' + uuid, '_blank');
+            });
+
+            // Pin button
+            const pinButton = document.createElement('button');
+            pinButton.textContent = 'Pin';
+            pinButton.classList.add('text-white', 'absolute', 'right-20', 'bottom-2.5', 'bg-green-700', 'hover:bg-green-800', 'focus:ring-green-300', 'font-medium', 'rounded-lg', 'text-sm', 'px-4', 'py-2', 'dark:bg-green-600', 'dark:hover:bg-green-700');
+            pinButton.addEventListener('click', () => {
+                // Toggle the pinned state on click
+                const isPinned = div.getAttribute('data-pinned') === '1';
+                div.setAttribute('data-pinned', isPinned ? '0' : '1');
+                // Optionally, change the button text to reflect the state
+                pinButton.textContent = isPinned ? 'Pin' : 'Unpin';
+                console.log('Pinned:', uuid, !isPinned); // Log the new state
+            });
+
+            div.appendChild(title);
+            div.appendChild(checkbox);
+            div.appendChild(openButton);
+            div.appendChild(pinButton); // Append the pin button next to the open button
+            searchResultsContainer.appendChild(div);
         });
-
-        // Pin button
-        const pinButton = document.createElement('button');
-        pinButton.textContent = 'Pin';
-        pinButton.classList.add('text-white', 'absolute', 'right-20', 'bottom-2.5', 'bg-green-700', 'hover:bg-green-800', 'focus:ring-green-300', 'font-medium', 'rounded-lg', 'text-sm', 'px-4', 'py-2', 'dark:bg-green-600', 'dark:hover:bg-green-700');
-        pinButton.addEventListener('click', () => {
-            // Toggle the pinned state on click
-            const isPinned = div.getAttribute('data-pinned') === '1';
-            div.setAttribute('data-pinned', isPinned ? '0' : '1');
-            // Optionally, change the button text to reflect the state
-            pinButton.textContent = isPinned ? 'Pin' : 'Unpin';
-            console.log('Pinned:', uuid, !isPinned); // Log the new state
-        });
-
-
-        div.appendChild(title);
-        div.appendChild(openButton);
-        div.appendChild(pinButton); // Append the pin button next to the open button
-        searchResultsContainer.appendChild(div);
-    });
-}
+    }
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
